    quilt).
  * Call quilt only once to apply all patches instead of once per patch
    when building 3.0 (quilt) source packages. Closes: #518453
  * Fix dpkg-shlibdeps so that it works again when analyzing binaries
    outside of package's directory. Closes: #518687
  * Modify dpkg-shlibdeps to let shlibs.local override symbols files too.

  [ Updated dselect translations ]
  * German (Sven Joachim).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).
  * French (Christian Perrier).

  [ Updated dpkg translations ]
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Mon, 02 Mar 2009 06:22:36 +0200

dpkg (1.15.0) experimental; urgency=low

  [ Guillem Jover ]
  * Do not suggest manually changing the alternative symlinks on
    update-alternative's verbose mode. Closes: #412487
  * Refactor subprocess signal setup.
  * Mark and coalesce similar strings for translation.
  * Add '.be' to the default dpkg-source -i regex. Closes: #481716
    Based on a patch by Ben Finney.
  * Fix link order when using libcompat.a and libintl.a by placing them after
    libdpkg.a. Based on a patch by Martin Koeppe. Closes: #481805
  * Remove duplicate program name from dpkg-trigger badusage output.
  * Trim trailing slash and slash dot from 'dpkg -S' arguments when those
    are path names, but not on patterns. Closes: #129577
  * Fix the support for passing more than one --status-fd option to dpkg.
    Until now only the last one was being used.
  * Replace realloc plus error checking usage with m_realloc.
  * Add '.hgignore' to the default dpkg-source -i regex and -I pattern.
    Closes: #485365
  * Support diverting files when origin and destination are on different file
    systems. Based on a patch by Juergen Kreileder. Closes: #102144, #149961
  * Do not silently enable --rename on dpkg-divert --remove. Closes: #160848
  * Do not allocate memory when lstat fails during package upgrade.