@@ -57,7 +57,6 @@ additional parameters might be accepted.
 
 \fBdpkg\-source\fP will build the source package with the first format
 that works from this ordered list:
-the format indicated in the \fIFormat\fP field of \fBdebian/control\fP,
 the format(s) indicated with the \fI\-\-format\fP command-line option(s),
 the format indicated in \fBdebian/source/format\fP,
 "1.0", "3.0 (native)". See below for an extensive description of
@@ -93,8 +92,7 @@ defaults to the debian standard format.
 .TP
 .BI \-\-format= value
 Try first the given format for building the source package. If used
-multiple times, they are tried in order. It doesn't override
-any explicit \fIFormat\fP field in \fBdebian/control\fP but it does
+multiple times, they are tried in order. It does
 override any format given in \fBdebian/source/format\fP.
 .TP
 .BI \-V name = value
