@@ -9,6 +9,9 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Fix dpkg-shlibdeps so that it works again when analyzing binaries
     outside of package's directory. Closes: #518687
   * Modify dpkg-shlibdeps to let shlibs.local override symbols files too.
+  * Drop support of debian/control's “Format” field used by dpkg-source while
+    it's not too late. Instead debian/source/format should be used to indicate
+    the desired source package format.
 
   [ Updated dselect translations ]
   * German (Sven Joachim).
